--- a/Benchmark_(MobileNetV3Large)_FineTuning.ipynb
+++ b/Benchmark_(MobileNetV3Large)_FineTuning.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "IRcfmg4S3Z_o"
       },
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "1oeShr8i2kNY"
       },
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Z8erpavN3-Mu"
       },
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "3CHDKUSn4Hk9"
       },
@@ -316,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "Gw3bytsn4OF1"
       },
@@ -336,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "IXacCN2G46gM"
       },
@@ -363,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5386,7 +5386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "SEWGV9fw6Mvh"
       },
@@ -5450,8 +5450,8 @@
         "        return img, metadata, label\n",
         "\n",
         "    def _finalize_data(self, img, metadata, label,\n",
-        "                       num_classes, img_size, meta_shape=17,\n",
-        "                       is_training=False, class_mode=\"categorical\"):\n",
+        "                    num_classes, img_size, meta_shape=17,\n",
+        "                    is_training=False, class_mode=\"categorical\"):\n",
         "\n",
         "        if is_training and self.transform:\n",
         "            img = self._apply_transform(img, img_size)\n",
@@ -5463,18 +5463,14 @@
         "\n",
         "        label = tf.cast(label, tf.int32)\n",
         "        if class_mode == \"categorical\":\n",
-        "            label = tf.one_hot(label, num_classes)  # shape: (num_classes,)\n",
-        "        elif class_mode == \"sparse\":\n",
-        "            label = label  # keep as integer scalar\n",
-        "        else:\n",
+        "            label = tf.one_hot(label, num_classes)\n",
+        "        elif class_mode != \"sparse\":\n",
         "            raise ValueError(f\"Unknown class_mode: {class_mode}\")\n",
         "\n",
         "        if metadata is None:\n",
-        "            batch_size = tf.shape(img)[0]\n",
-        "            metadata = tf.zeros((batch_size, meta_shape), dtype=tf.float32)\n",
-        "        else:\n",
-        "            metadata = tf.cast(metadata, tf.float32)\n",
+        "            return img, label\n",
         "\n",
+        "        metadata = tf.cast(metadata, tf.float32)\n",
         "        return ((img, metadata), label)\n",
         "\n",
         "    def flow_from_dataframe(\n",
@@ -5546,7 +5542,7 @@
       "metadata": {
         "id": "p_hb9xehdrJ5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5569,7 +5565,7 @@
         "id": "IIuY41lncTTS",
         "outputId": "963eb348-16df-42a7-b98e-a52508626b2c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5603,7 +5599,7 @@
         "id": "6HVRkKC-dPp5",
         "outputId": "65cbaf4e-ee4f-446b-802b-bddfa6e28f72"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5631,7 +5627,7 @@
         "id": "21S8-A8DuW7K",
         "outputId": "77b452e5-faf7-435d-b8a3-3a9787e504c6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5659,7 +5655,7 @@
       "metadata": {
         "id": "U_3Vw9B3okfj"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5676,7 +5672,7 @@
       "metadata": {
         "id": "NRSeqyZypA7q"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5695,7 +5691,7 @@
         "id": "rV5iPBsopytN",
         "outputId": "2e080cea-abfb-415f-d0fc-44971278c734"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5729,7 +5725,7 @@
       "metadata": {
         "id": "3RVV_yXVnN3n"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5776,7 +5772,7 @@
         "id": "GxiDnM1TnkHr",
         "outputId": "f662b6ec-8abb-4ebd-8a83-219b6aa92f95"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7592,7 +7588,7 @@
       "metadata": {
         "id": "lJsi-avcb3Vh"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8035,7 +8031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
